Fixed navbar menus behind behind elements

--- a/personal_portfolio/static/css/base.css
+++ b/personal_portfolio/static/css/base.css
@@ -12,6 +12,10 @@ body {
     max-width: 100%;
 }
 
+.front {
+    z-index: 10000;
+}
+
 .fullscreen {
     display: flex;
     align-items: center;
