--- a/personal_portfolio/static/css/resume.css
+++ b/personal_portfolio/static/css/resume.css
@@ -15,7 +15,6 @@ a.anchor {
 
 .resume-navbar {
     margin-top:6vh;
-    z-index: 0;
 }
 
 .resume-navbar-items > * {
